# University_lab_C-plus-plus

./: CMakeLists.txt  README.md  my_string.cpp  my_string.h  my_string_tests.cpp  my_string_view.cpp  my_string_view.h  my_string_view_tests.cpp
lib/googlemock/docs/: cheat_sheet.md  cook_book.md
lib/googletest/src/: gtest-death-test.cc  gtest.cc
